[tool.poetry]
name = "vkmusicparser"
version = "0.0.1"
description = "The project automatically searches for song titles to transfer your playlist from VKontakte to yandex.music"
authors = ["Timur Shagiev <futurehouseprogressive@gmail.com>"]
license = "GPL3 or later"

[tool.poetry.dependencies]
python = "3.10"
selenium = "^4.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
