[tool.poetry]
name = "parsehhru_anon"
version = "0.1.0"
description = ""
authors = ["noartone <futurehouseprogressive@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
pandas = "^1.4.3"
tqdm = "^4.64.0"
bs4 = "^0.0.1"
fake-useragent = "^0.1.11"
chardet = "^5.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
